--- a/.bowerrc
+++ b/.bowerrc
@@ -1,4 +1,4 @@
 {
     "directory": "src/plugins",
-    "registry": "http://adapt-bower-repository.herokuapp.com/"
+    "registry": "http://54.156.201.53:3333/"
 }
